--- a/css/index.css
+++ b/css/index.css
@@ -113,3 +113,13 @@ h1 {
     animation:fade 3000ms infinite;
     -webkit-animation:fade 3000ms infinite;
 }
+#block{
+    width:80px; height: 80px; background:red;
+}
+#triangle{
+    width: 0px;
+    height: 0px;
+    border-style: solid;
+    border-width: 0 30px 60px 30px;
+    border-color: transparent transparent #007bff transparent;
+}
