--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,6 +56,10 @@
 	margin-bottom: 3em;
 	margin-top: 8em;
 }
+.logo.menor{
+	margin-bottom: 0em;
+	margin-top: 3em;
+}
 .ui-content p {
 	font-family: 'MissionGothic300', sans-serif;
 	font-size: 2em !important;
@@ -92,6 +96,9 @@
 	text-shadow: none !important;
 	font-weight: 300 !important;
 	letter-spacing: 1.2px;
+	text-overflow: initial !important;
+	overflow: visible !important;
+	white-space: normal !important;
 }
 .ui-btn.branco{
 	background-color: #fff !important;
@@ -147,6 +154,10 @@
 		margin-top: 2% !important;
 	}
 	.logo {
+		margin-top: 1em;
+	}
+	.logo.menor{
+		margin-bottom: 0em;
 		margin-top: 1em;
 	}
 	.ui-content p {
