--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -173,13 +173,16 @@
 		margin-left: 0%;
 	}
 	.ui-content .ui-btn {
-		width: 100%;
-		padding: 0.3em !important;
-		padding-left: 0px !important;
-		padding-right: 0px !important;
+		width: 95%;
+		padding: 0.3em 0.4em !important;
+		/*padding-left: 0px !important;
+		padding-right: 0px !important;*/
 		background-size: 1.5em;
 		font-size: 1.0em !important;
 		margin-left: 0px !important;
+	}
+	.ui-header .ui-title, .ui-footer .ui-title{
+		margin: 0 25% !important;
 	}
 }
 
