--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,12 +24,12 @@
 
 .ui-overlay-a, .ui-page-theme-a, .ui-page-theme-a .ui-panel-wrapper{
 	background: url("../img/bg.jpg") ;
-	background-position: top center;
+	background-position: top center !important;
 	background-attachment: fixed !important;
 }
 .ui-header {
 	background: url("../img/bg-header.jpg");
-	background-attachment: fixed;
+	background-attachment: fixed !important;
 	height: 5em;
 	overflow: hidden;
 }
